force-app/main/default/objects/ChargeOver_Quote__c/ChargeOver_Quote__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Quote</label>
    <nameField>
        <label>ChargeOver Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>