force-app/main/default/objects/ChargeOver_Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ChargeOver Quotes</relationshipLabel>
    <relationshipName>ChargeOver_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>