force-app/main/default/objects/ChargeOver_Quote__c/fields/Billing_Street_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Line_3__c</fullName>
    <label>Billing Street Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>