force-app/main/default/objects/ChargeOver_Quote__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-800Accountant</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
            <value>
                <fullName>EIN-Tax-Filing</fullName>
            </value>
            <value>
                <fullName>Subscription Management Services</fullName>
            </value>
            <value>
                <fullName>Bill62</fullName>
            </value>
            <value>
                <fullName>EzBizFile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>