force-app/main/default/objects/ChargeOver_Quote__c/fields/ChargeOver_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Quote_ID__c</fullName>
    <externalId>true</externalId>
    <label>ChargeOver Quote ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>