force-app/main/default/objects/ChargeOver_Quote__c/fields/ChargeOver_URL_Token__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_URL_Token__c</fullName>
    <externalId>true</externalId>
    <label>ChargeOver URL Token</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>