force-app/main/default/objects/ChargeOver_Quote__c/fields/ChargeOver_View_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_View_URL__c</fullName>
    <label>ChargeOver View URL</label>
    <type>Url</type>
</CustomField>