force-app/main/default/objects/ChargeOver_Quote__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ChargeOver Quotes</relationshipLabel>
    <relationshipName>ChargeOver_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>