force-app/main/default/objects/ChargeOver_Quote__c/fields/Credit_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_ID__c</fullName>
    <label>Credit Card ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>