force-app/main/default/objects/ChargeOver_Quote__c/fields/Installment_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Installment_Payment_Schedule__c</fullName>
    <label>Installment Payment Schedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>