force-app/main/default/objects/ChargeOver_Quote__c/fields/IS_FROM_CHARGEOVER__c.field-meta.xml
<CustomField>
    <fullName>IS_FROM_CHARGEOVER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is from ChargeOver?</label>
    <type>Checkbox</type>
</CustomField>