force-app/main/default/objects/ChargeOver_Quote__c/fields/LAST_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>LAST_SOURCE__c</fullName>
    <label>Last Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>