force-app/main/default/objects/ChargeOver_Quote__c/fields/Name_of_Offer_Package__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Offer_Package__c</fullName>
    <description>The name of the offer or package that was selected either through the website or pricing calculator</description>
    <label>Name of Offer/Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customized LLC</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>