force-app/main/default/objects/ChargeOver_Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ChargeOver Quotes</relationshipLabel>
    <relationshipName>ChargeOver_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>