force-app/main/default/objects/ChargeOver_Quote__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>ChargeOver Quotes</relationshipLabel>
    <relationshipName>ChargeOver_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>