force-app/main/default/objects/ChargeOver_Quote__c/fields/Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Created</label>
    <type>Checkbox</type>
</CustomField>