force-app/main/default/objects/ChargeOver_Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>The Quote number for the Salesforce Quote</description>
    <label>Quote Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>