force-app/main/default/objects/ChargeOver_Quote__c/fields/TriggerUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>TriggerUpdateFlag__c</fullName>
    <label>TriggerUpdateFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>